# UnitexRecognizer

./: CMakeLists.txt  README.md  recognizer
Modules/: FindSimpleAmqpClient.cmake  Findcpprest.cmake
data/English/Dela/: dico.dic  dico.inf
data/English/Graphs/Normalization/: Norm.fst2
data/English/Graphs/Preprocessing/Replace/: Replace.fst2
data/English/Graphs/Preprocessing/Sentence/: Sentence.fst2
data/French/Dela/: cancer_rectum.dic  cancer_rectum.inf  dico.dic  dico.inf
data/French/Graphs/: annot.fst2  annot.grf  locate.fst2  locate.grf  pluriel.fst2  pluriel.grf  terminaison.fst2  terminaison.grf  variante.grf
data/French/Graphs/Context/: context.fst2  context.grf
data/French/Graphs/Context/Experiencer/: experiencer.fst2  experiencer.grf  famille.fst2  famille.grf  termin_experiencer.fst2  termin_experiencer.grf
data/French/Graphs/Context/Negation/: negation.fst2  negation.grf  negation_post.fst2  negation_post.grf  negation_pre.fst2  negation_pre.grf  negation_termin.fst2  negation_termin.grf
data/French/Graphs/Context/Temporality/: hist.fst2  hist.grf  hist_pre.fst2  hist_pre.grf  hist_pseudo.fst2  hist_pseudo.grf  hist_termin.grf  hypo.fst2  hypo.grf  hypo_pre.fst2  hypo_pre.grf  hypo_termin.fst2  hypo_termin.grf  poss.fst2  poss.grf  poss_post.fst2  poss_post.grf  poss_pre.fst2  poss_pre.grf
data/French/Graphs/Normalization/: Norm.fst2
data/French/Graphs/Pharmacogenomics/: pharmacogenomics.fst2  pharmacogenomics.grf
data/French/Graphs/Pharmacogenomics/Drug/: drug.fst2  drug.grf  forme_galenique.fst2  forme_galenique.grf  posologie.fst2  posologie.grf
data/French/Graphs/Pharmacogenomics/Effects/: effects.fst2  effects.grf  triggerterms.fst2  triggerterms.grf
data/French/Graphs/Preprocessing/Replace/: Replace.fst2
data/French/Graphs/Preprocessing/Sentence/: Sentence.fst2
data/French/Graphs/save/: experiencer.grf
lib/: libunitex.dylib
src/: Annotation.h  Configuration.cpp  Configuration.h  Environment.cpp  Environment.h  Unitex.cpp  Unitex.h  unitex_recognizer.cpp
src/server/: server.h
src/unitex/: Annotation.cpp  Configuration.cpp  Configuration.h  Environment.h  Unitex.cpp  Unitex.h
